# stellar-enclave

./: .gitignore  Cargo.toml  Makefile  README.md  RUNBOOK.md  Trunk.toml  _typos.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-pool-integration-multi-org-namespace/: 01-04-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-facilitator-bridge/: 02-02-SUMMARY.md  02-05-SUMMARY.md  02-06-SUMMARY.md  02-07-SUMMARY.md  02-08-SUMMARY.md
.planning/phases/03-agent-sdk-enclave-agent/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03.1-agent-wire-format-fix/: 03.1-01-SUMMARY.md
.planning/phases/04-enclave-gate-middleware-gated-endpoint/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-dashboard-ops-hardening/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-07-SUMMARY.md  05-07-VERIFICATION.md  05-VERIFICATION.md
.planning/phases/06-demo-recording-submission/: FRANCO-CHECKLIST.md
.planning/phases/07-marketing-landing-page-with-framer-motion-parallax-explains-product-vision-hero-sections-derived-from-existing-docs-go-to-app-cta-enclave-html/: 07-02-SUMMARY.md  07-03-SUMMARY.md  07-04-SUMMARY.md  07-05-SUMMARY.md  07-06-SUMMARY.md
app/: enclave.html  index.html  package-lock.json  package.json
app/css/: app.css  tailwind.src.css
app/e2e/tests/: enclave-parity.spec.js
app/js/: prover-client.js  stellar.js  transaction-builder.js  worker.js
app/js/__mocks__/: prover.js
app/js/__tests__/enclave/: bundle.test.js  dashboard.test.js  deposit-invariants.test.js  deposit.test.js  enroll.test.js  keys.test.js  org.test.js  registry.test.js
app/js/enclave/: agent-package.js  bundle.js  dashboard.js  deposit.js  enroll.js  index.js  keys.js  notes-export.js  org.js  registry.js
app/js/state/: asp-membership-store.js  db.js  index.js  notes-store.js  pool-store.js  retention-verifier.js  sync-controller.js
apps/demo/: package.json  vitest.config.ts
apps/demo/src/: env.ts  index.ts
apps/demo/src/routes/: gated.ts  health.ts
apps/demo/test/e2e/: gate-e2e.spec.ts
apps/landing/: .env.example  .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json  vercel.json
apps/landing/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
apps/landing/components/: DiagramSvg.tsx
apps/landing/components/providers/: LenisProvider.tsx
apps/landing/components/sections/: Footer.tsx  HeroSection.tsx  HowItWorks.tsx  ProblemSection.tsx  ThreeOrgs.tsx  TryItSection.tsx
apps/landing/components/ui/: BtnGhost.tsx  BtnPrimary.tsx  EnclaveShield3D.tsx  OrgCard.tsx  Pill.tsx  PoolIcon.tsx  VideoModal.tsx
apps/landing/e2e/: claim-hygiene.spec.ts  smoke.spec.ts
apps/landing/lib/: constants.ts
circuits/: build.rs
circuits/src/test/: prove_policy.rs
demo/final/: YOUTUBE-UPLOAD.txt
demo/fixtures/: demo-endpoint.json
docs/: benchmarks.md
e2e-tests/src/tests/: utils.rs
facilitator/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
facilitator/src/: app.ts  index.ts  state.ts
facilitator/src/chain/: balanceReader.ts  errorMapping.ts  hydrateNullifierCache.ts  poolTransaction.ts  simulatePoolTransaction.ts  stellarClient.ts  submitPoolTransaction.ts  types.ts
facilitator/src/cli/: bootstrap.ts  loadFixtureForE2e.ts
facilitator/src/config/: env.ts  paths.ts
facilitator/src/mock/: offChainVerify.ts
facilitator/src/replay/: cache.ts  types.ts
facilitator/src/routes/: health.ts  settle.ts  settlements.ts  supported.ts  verify.ts
facilitator/src/settlements/: log.ts
facilitator/src/utils/: extDataHash.ts
facilitator/src/validation/: bindingCheck.ts  solvencyCheck.ts
facilitator/test/e2e/: demoLock.spec.ts  testnet.spec.ts
facilitator/test/fixtures/: ext-data-hash-vectors.json  ext-data.json  payment-requirements.json  shielded-proof.json
facilitator/test/helpers/: createTestApp.ts  fixtureLoader.ts  goldenVectors.ts  mockChainClient.ts
facilitator/test/integration/: cors.spec.ts  health.spec.ts  settle.spec.ts  settlements.spec.ts  verify.spec.ts
facilitator/test/unit/: balanceReader.spec.ts  bindingCheck.spec.ts  bootstrap.spec.ts  cache.spec.ts  coreTypes.spec.ts  env.spec.ts  errorMapping.spec.ts  extDataHash.spec.ts  hydrateNullifierCache.spec.ts  offChainVerify.spec.ts  poolTransaction.spec.ts  settlements-log.spec.ts  smoke.spec.ts  solvencyCheck.spec.ts
gate/: package.json  vitest.config.ts
gate/src/: env.ts  facilitatorClient.ts  index.ts  middleware.ts  types.ts
gate/test/unit/: facilitatorClient.spec.ts  middleware.spec.ts
scripts/: check-claim-hygiene.sh  check-upstream.sh  demo-accounts.json  deploy.sh  deployments.json  preflight.sh  prover-bench-browser.mjs  prover-bench.mjs  render-contracts-table.sh  run-final-preflight.sh  seed-demo-accounts.sh  smoke-test.sh  substitute-dorahacks-url.sh  substitute-video-url.sh  sync-app-dev-artifacts.sh
scripts/__tests__/: preflight-full-check.bats
scripts/bench-fixtures/: witness-1real-1null.json
tools/ceremony-cli/: Cargo.toml  README.md
tools/ceremony-cli/src/: main.rs
tools/smoke-fixture-cli/: Cargo.toml
tools/smoke-fixture-cli/src/: main.rs
treasury/: package.json
treasury/src/: index.ts
wallets/circuits/fixtures/: e2e-proof.json
wallets/facilitator/: .gitignore
