[workspace]
members = [
    "app/crates/prover",
    "app/crates/witness",
    "circuits",
    "contracts/*",
    "e2e-tests",
    "poseidon2",
    "tools/ceremony-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/stellar-private-transactions"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.1", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-snark = { version = "0.5.1", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
asp-membership = { path = "contracts/asp-membership" }
asp-non-membership = { path = "contracts/asp-non-membership" }
circom-groth16-verifier = { path = "contracts/circom-groth16-verifier" }
console_error_panic_hook = { version = "0.1.7", default-features = false }
contract-types = { path = "contracts/types" }
getrandom = { version = "0.2", features = ["js"] }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.9", default-features = false }
soroban-sdk = { version = "25.0.2", default-features = false, features = ["hazmat"] }
soroban-utils = { path = "contracts/soroban-utils" }
wasm-bindgen = { version = "0.2.108", default-features = false }
wasm-bindgen-test = { version = "0.3" }
wasmer = { version = "6.1", default-features = false }
zkhash = { path = "poseidon2" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-snark = { git = "https://github.com/arkworks-rs/snark.git" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16.git" }
