[package]
name = "ceremony-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ceremony-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
getrandom.workspace = true
glob = "0.3.3"
shlex = "1.3.0"
zeroize = "1.8.1"

[lints]
workspace = true
